# biomed-troubleshooter

./: .env.example  .gitattributes  .gitignore  AI Automation - Shortcut.lnk  LIVE_MODE_INSTRUCTIONS.md  Langgraph Terminal Error.txt  README.md  analyze_frames.py  debug_multimeter.py  docker-compose.yml  langgraph.json  log_raw_data.py  pyproject.toml  raw_dump.py  requirements.txt  start-dev.bat  start-dev.sh  start-services.ps1  start-services.sh  start.bat  start.sh  test_all_baud_rates.py  test_baud_rates.py  test_comprehensive.py  test_langsmith.py  test_mm.py  test_new_format.py  test_raw_serial.py  test_troubleshooting.py  test_troubleshooting_simple.py  test_usb_connection.py  test_usb_multimeter.py  test_verbose.py
.claude/: settings.local.json
.coding-agent/: AGENTS.md  ARCHITECTURE.md  SPEC.md  STATUS.md
.langgraph_api/: .langgraph_ops.pckl
OtherAI-Discussions/: Claude Sonnet 4.6 response.md  Gemini 3.1 Pro response.md
docs/: DOCUMENTATION_REVIEW.md  GROUP 25 PPT PRESENTATION.docx  LANGSMITH_SETUP.md  PROJECT_AI_DOCUMENTATION.md  PROJECT_CONTEXT_FOR_AI.md  PROMPT_FOR_DOCUMENTATION.md  SCENARIOS_EXPLANATION.md  agent_io_contract.md  agent_scope.md  arch_compliance_report.md  equipment_schema.md  free_models_guide.md  implementation_plan.md  langgraph_design.md  ppt example.txt  presentation.txt  project proposal.md  signal_schema.md  ~$OUP 25 PPT PRESENTATION.docx
plans/: diagnostic-agent-refactor-plan.md  langsmith_studio_troubleshooting_agent_plan.md
scripts/: ingest_knowledge.py  populate_chromadb.py
src/: __init__.py
tests/: verify_images.py  (+2 more)
(+39 files in other folders)
